<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/register"
            android:textColor="@color/dark_grey"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:hint="@string/usn"
            android:paddingLeft="15dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:hint="@string/email"
            android:paddingLeft="15dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:hint="@string/phone"
            android:paddingLeft="15dp"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linear_gender"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:layout_gravity="left"
            android:background="@drawable/rectangle_pink">

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/light_grey"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/light_grey"/>
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:textSize="11sp"
            android:layout_gravity="left"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_regist"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</RelativeLayout>