<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/lin_layout"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/lin_layout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingHorizontal="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:background="@drawable/rectangle_pink">

        <LinearLayout
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_homepage"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_personal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pers_detail"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txt_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txt_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txt_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

</RelativeLayout>
